name:                origami
version:             0.1.0.0
-- synopsis:
-- description:
build-type:          Simple
cabal-version:       >=1.10

executable origami
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , QuickCheck
